syntax = "proto3";
package model;

option java_package = "com.hzs.grpc_service.model";
option java_outer_classname = "CampaignGrpcProto";
option java_multiple_files = true;

import "campaign.proto";

service CampaignService {
  rpc GetUserCampaigns (UserRequest) returns (UserResponse) {
  }
}

message UserRequest {
  string user_id = 1;
  UserProfile user_profile = 2;
}

message UserResponse {
  repeated Campaign campaigns = 1;
}

message UserProfile {
  repeated RuleVersionPair ruleVersion = 1;
}

message RuleVersionPair {
  string rule_id = 1;
  int64 version = 2;
}